--- a/main.tex
+++ b/main.tex
@@ -437,7 +437,7 @@ Minimalnie wzrosła też maksymalna poprawność klasyfikacji z $87.17$ do $92.3
 \subsection{Eksperyment 3}
 Eksperyment trzeci, będzie polegał na szukaniu takich metaparametrów, aby dodać nieco głębi do wykresu.
 Zmienione zostaną teraz również inne parametry.
-Tym razem współczynnik uczenia będzie wynosić $0.001$, a maksymalna liczba epok będzie wynosić $1000$.
+Tym razem współczynnik uczenia będzie wynosić $0.001$, a maksymalna liczba epok $1000$.
 Warstwa pierwsza i druga zawierają liczbę neuronów z zakresu 10 - 400 z krokiem 10.
 \begin{figure}[H]
     \centering
@@ -451,6 +451,10 @@ Tym razem eksperyment będzie polegał na zmianie liczby warstw oraz współczyn
 Wykorzystany został do tego różniący się od poprzedniego skrypt.
 \subsection{Eksperyment 5}
 \section{Wnioski}
+Na podstawie przeprowadzonych eksperymentów można było dostrzec różne zachowania sieci w zależności od dobranych parametrów.
+Parametry można było dobrać w taki sposób, że liczba neuronów w sieci nie miała zbyt dużego wpływu na poprawność klasyfikacji.
+Miała jednak ogromny wpływ jeżeli chodzi o szybkość nauki, gdyż w eksperymencie drugim na koniec działania skryptu czekałem kilkanaście razy dłużej względem pierwszego.
+
 \begin{thebibliography}{9}
     \bibitem{Nielsen}
     Michael Nielsen,
